changes in resume and some css

--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -107,6 +107,9 @@
   margin: auto;
   text-align: center;
   text-transform: lowercase;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
 }
 .languages-profile .languages-name span {
   color: #fffffe;
